src/components/Skills/Skills.module.scss
@import '../../common/styles/variables';

.skillsBlock {
  background-color: var(#{--bgPrimaryDefault});
  color: var(#{--textDefault});

  .wrapper {
    min-height: calc(100vh - 70px);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    padding: 100px 0;

    .title {
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;

      h2 {
        font-size: 40px;
        margin: 15px 0 48px;
      }

      h3 {
        background-color: #f5df4f;
        color: #000000;
        padding: 0 8px;
        font-weight: lighter;
        font-size: 15px;
      }
    }

    .skills {
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      gap: 15px;

      @media screen and (max-width: 991px) {
        grid-template-columns: repeat(3, 1fr);
      }

      @media screen and (max-width: 767px) {
        grid-template-columns: repeat(2, 1fr);
      }
    }
  }

  @media screen and (max-width: 575px) {
    .wrapper {
      padding: 50px 0;

      .title h2 {
        font-size: 26px;
      }
    }
  }
}

